Add task dependencies, theme manager & UI polish
Introduce task dependency support and a theme engine plus a number of UI/UX improvements. Cargo.toml now depends on the `open` crate and Cargo.lock updated accordingly. GanttApp gains a ThemeManager and the UI is refactored to use new theme helpers (new files theme_def.rs and theme_manager.rs were added); dialogs, panels and status bar now pull sizes/colors/fonts from theme. Tasks can be linked/unlinked in the Gantt chart (Shift+drag to create, right-click to remove), arrows are rendered with hover/focus interactions and tooltips, and duplicate links are avoided. Vertical task reordering via drag was implemented with animated row Y positions and visual drop targets. Misc: CSV import uses the theme palette, some small model/timeline helpers were removed, and module exports were adjusted.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ uuid = { version = "1", features = ["v4", "serde"] }
 rfd = "0.15"
 csv = "1"
 directories = "5"
+open = "5"
 
 [profile.release]
 opt-level = 2
