--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ Thumbs.db
 
 # Test / scratch files
 test_import.csv
+_assets/01hdihe0tpLgOvrLCzWJ53f-6.webp
+_assets/create-gantt.png
+_assets/Gantt-Light-Mode-Timeline-Focus.jpg
+_assets/how-to-make-a-gantt-chart-linking-task-dependencies.webp
+_assets/ProjectManager.com_Gantt_Chart_Software.jpg
