--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-gantt-app"
-version = "0.2.0"
+version = "0.3.0-dev"
 edition = "2021"
 description = "A native Gantt chart desktop application built with Rust and egui"
 authors = ["mhj"]
